--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -7,5 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
