--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -6,8 +6,12 @@ jobs:
   notification_test:
     runs-on: ubuntu-latest
     steps:
+      - name: exit 1 test
+        run: aaaaa
+
       - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always() 
