--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -6,6 +6,15 @@ jobs:
   notification_test:
     runs-on: ubuntu-latest
     steps:
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      # Notification for Failed
       - name: exit 1 test
         run: aaaaa
 
@@ -14,4 +23,4 @@ jobs:
           status: ${{ job.status }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always() 
+        if: always()
