try error for apostrophe

--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -49,7 +49,7 @@ jobs:
           status: ${{ job.status }}
           fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
           author_name: ${{ github.actor }}
-          text: 'I am heleeen'
+          text: "I'm heleeen"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
